# Synapse-X

./: .gitignore  CMakeLists.txt  README.md  Readme.md  STATUS.md
client/: CLIENT_ARCHITECTURE.md  CLIENT_SPEC.md  CMakeLists.txt
client/include/: CudaPreprocess.h  TrtInference.h  UdpReplySender.h
client/src/: CudaPreprocess.cpp  TrtInference.cpp  UdpReceiver.cpp  UdpReplySender.cpp  main.cpp
client/test/: CMakeLists.txt
client/test/include/: ImageUtils.h
client/test/result/: apex_enemy_detections.txt  bf6_enemy_self_detections.txt  delta_body_head_detections.txt  ow2_enemy_detections.txt
client/test/src/: main.cpp
host/: CMakeLists.txt  CMakePresets.json  HOST_ARCHITECTURE.md  HOST_REPLY_TASK.md  HOST_SPEC.md  MOUSE_CONTROL_SPEC.md  mouse_control.md
host/include/: DxgiCapturer.h  HttpTuner.h  Lz4Compressor.h  MouseController.h  UdpReplyReceiver.h  UdpSender.h
host/src/: DxgiCapturer.cpp  HttpTuner.cpp  HttpTuner.cpp.bak  Lz4Compressor.cpp  MouseController.cpp  UdpReplyReceiver.cpp  UdpSender.cpp  main.cpp
host/test/: test_bmp.cpp
host/web/: index.html
shared/: CMakeLists.txt
shared/include/: PacketHeader.h  ReplyPacket.h
